src/grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from grammar.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_calc -> Stm                                 (0)
	Stm -> type "::=" TypeDef                          (1)
	Stm -> ident ":" Type                              (2)
	Stm -> ident ":" "?"                               (3)
	Stm -> ident ":=" Exp                              (4)
	Stm -> ident ":=" "{" Exps "}"                     (5)
	Stm -> class type ident "{" "}"                    (6)
	Stm -> export type "{" "}"                         (7)
	Stm -> export "{" "}"                              (8)
	Stm -> instance type type "{" "}"                  (9)
	Stm -> Exp                                         (10)
	Exp -> pattern "{" Pattern "}"                     (11)
	Exp -> "(" Exp ")"                                 (12)
	Exp -> Exp binop Exp                               (13)
	Exp -> ident "<-" Exp                              (14)
	Exp -> ident                                       (15)
	Exp -> "λ" ident "->" Exp                          (16)
	Exp -> Const                                       (17)
	Exp -> ident "(" Args ")"                          (18)
	Exp -> case Exp "{" Case "}"                       (19)
	Args ->                                            (20)
	Args -> Exp                                        (21)
	Args -> Args "," Exp                               (22)
	Case -> Case1                                      (23)
	Case -> Case Case1                                 (24)
	Case1 -> Exp "=>" Exp ";"                          (25)
	Pattern -> Pattern1                                (26)
	Pattern -> Pattern Pattern1                        (27)
	Pattern1 -> Const "=>" Exp ";"                     (28)
	Const -> int                                       (29)
	Const -> str                                       (30)
	Const -> chr                                       (31)
	Exps -> Exp1                                       (32)
	Exps -> Exps Exp1                                  (33)
	Exp1 -> Exp ";"                                    (34)
	TypeDef -> type                                    (35)
	TypeDef -> TypeDef "|" type                        (36)
	Type -> type                                       (37)
	Type -> Type "->" type                             (38)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	"->"           { TokenArrow }
	"=>"           { TokenDoubleArrow }
	"<-"           { TokenLeftArrow }
	"::="          { TokenData }
	"|"            { TokenPipe }
	":"            { TokenTypeSign }
	";"            { TokenSemi }
	","            { TokenComma }
	"λ"            { TokenLambda }
	str            { TokenString $$ }
	chr            { TokenChar   $$ }
	":="           { TokenAssign }
	"("            { TokenLParen }
	")"            { TokenRParen }
	"{"            { TokenLBracket }
	"}"            { TokenRBracket }
	"?"            { TokenQMark }
	ident          { TokenIdent $$ }
	int            { TokenInt   $$ }
	type           { TokenType  $$ }
	pattern        { Builtin "pattern" }
	case           { Builtin "case" }
	export         { Builtin "export" }
	instance       { Builtin "instance" }
	class          { Builtin "class" }
	binop          { BinOp $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_calc     rule  0
	Stm             rules 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
	Exp             rules 11, 12, 13, 14, 15, 16, 17, 18, 19
	Args            rules 20, 21, 22
	Case            rules 23, 24
	Case1           rule  25
	Pattern         rules 26, 27
	Pattern1        rule  28
	Const           rules 29, 30, 31
	Exps            rules 32, 33
	Exp1            rule  34
	TypeDef         rules 35, 36
	Type            rules 37, 38

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_calc -> . Stm                                (rule 0)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 10
	int            shift, and enter state 11
	type           shift, and enter state 2
	pattern        shift, and enter state 12
	case           shift, and enter state 13
	export         shift, and enter state 14
	instance       shift, and enter state 15
	class          shift, and enter state 16

	Stm            goto state 3
	Exp            goto state 4
	Const          goto state 5

State 1

	Stm -> . type "::=" TypeDef                         (rule 1)

	type           shift, and enter state 2


State 2

	Stm -> type . "::=" TypeDef                         (rule 1)

	"::="          shift, and enter state 31


State 3

	%start_calc -> Stm .                                (rule 0)

	%eof           accept


State 4

	Stm -> Exp .                                        (rule 10)
	Exp -> Exp . binop Exp                              (rule 13)

	binop          shift, and enter state 30
	%eof           reduce using rule 10


State 5

	Exp -> Const .                                      (rule 17)

	"=>"           reduce using rule 17
	";"            reduce using rule 17
	","            reduce using rule 17
	")"            reduce using rule 17
	"{"            reduce using rule 17
	binop          reduce using rule 17
	%eof           reduce using rule 17


State 6

	Exp -> "λ" . ident "->" Exp                         (rule 16)

	ident          shift, and enter state 29


State 7

	Const -> str .                                      (rule 30)

	"=>"           reduce using rule 30
	";"            reduce using rule 30
	","            reduce using rule 30
	")"            reduce using rule 30
	"{"            reduce using rule 30
	binop          reduce using rule 30
	%eof           reduce using rule 30


State 8

	Const -> chr .                                      (rule 31)

	"=>"           reduce using rule 31
	";"            reduce using rule 31
	","            reduce using rule 31
	")"            reduce using rule 31
	"{"            reduce using rule 31
	binop          reduce using rule 31
	%eof           reduce using rule 31


State 9

	Exp -> "(" . Exp ")"                                (rule 12)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 28
	Const          goto state 5

State 10

	Stm -> ident . ":" Type                             (rule 2)
	Stm -> ident . ":" "?"                              (rule 3)
	Stm -> ident . ":=" Exp                             (rule 4)
	Stm -> ident . ":=" "{" Exps "}"                    (rule 5)
	Exp -> ident . "<-" Exp                             (rule 14)
	Exp -> ident .                                      (rule 15)
	Exp -> ident . "(" Args ")"                         (rule 18)

	"<-"           shift, and enter state 24
	":"            shift, and enter state 25
	":="           shift, and enter state 26
	"("            shift, and enter state 27
	binop          reduce using rule 15
	%eof           reduce using rule 15


State 11

	Const -> int .                                      (rule 29)

	"=>"           reduce using rule 29
	";"            reduce using rule 29
	","            reduce using rule 29
	")"            reduce using rule 29
	"{"            reduce using rule 29
	binop          reduce using rule 29
	%eof           reduce using rule 29


State 12

	Exp -> pattern . "{" Pattern "}"                    (rule 11)

	"{"            shift, and enter state 23


State 13

	Exp -> case . Exp "{" Case "}"                      (rule 19)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 21
	Const          goto state 5

State 14

	Stm -> export . type "{" "}"                        (rule 7)
	Stm -> export . "{" "}"                             (rule 8)

	"{"            shift, and enter state 19
	type           shift, and enter state 20


State 15

	Stm -> instance . type type "{" "}"                 (rule 9)

	type           shift, and enter state 18


State 16

	Stm -> class . type ident "{" "}"                   (rule 6)

	type           shift, and enter state 17


State 17

	Stm -> class type . ident "{" "}"                   (rule 6)

	ident          shift, and enter state 52


State 18

	Stm -> instance type . type "{" "}"                 (rule 9)

	type           shift, and enter state 51


State 19

	Stm -> export "{" . "}"                             (rule 8)

	"}"            shift, and enter state 50


State 20

	Stm -> export type . "{" "}"                        (rule 7)

	"{"            shift, and enter state 49


State 21

	Exp -> Exp . binop Exp                              (rule 13)
	Exp -> case Exp . "{" Case "}"                      (rule 19)

	"{"            shift, and enter state 48
	binop          shift, and enter state 30


State 22

	Exp -> ident . "<-" Exp                             (rule 14)
	Exp -> ident .                                      (rule 15)
	Exp -> ident . "(" Args ")"                         (rule 18)

	"=>"           reduce using rule 15
	"<-"           shift, and enter state 24
	";"            reduce using rule 15
	","            reduce using rule 15
	"("            shift, and enter state 27
	")"            reduce using rule 15
	"{"            reduce using rule 15
	binop          reduce using rule 15
	%eof           reduce using rule 15


State 23

	Exp -> pattern "{" . Pattern "}"                    (rule 11)

	str            shift, and enter state 7
	chr            shift, and enter state 8
	int            shift, and enter state 11

	Pattern        goto state 45
	Pattern1       goto state 46
	Const          goto state 47

State 24

	Exp -> ident "<-" . Exp                             (rule 14)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 44
	Const          goto state 5

State 25

	Stm -> ident ":" . Type                             (rule 2)
	Stm -> ident ":" . "?"                              (rule 3)

	"?"            shift, and enter state 42
	type           shift, and enter state 43

	Type           goto state 41

State 26

	Stm -> ident ":=" . Exp                             (rule 4)
	Stm -> ident ":=" . "{" Exps "}"                    (rule 5)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	"{"            shift, and enter state 40
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 39
	Const          goto state 5

State 27

	Exp -> ident "(" . Args ")"                         (rule 18)

	","            reduce using rule 20
	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	")"            reduce using rule 20
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 37
	Args           goto state 38
	Const          goto state 5

State 28

	Exp -> "(" Exp . ")"                                (rule 12)
	Exp -> Exp . binop Exp                              (rule 13)

	")"            shift, and enter state 36
	binop          shift, and enter state 30


State 29

	Exp -> "λ" ident . "->" Exp                         (rule 16)

	"->"           shift, and enter state 35


State 30

	Exp -> Exp binop . Exp                              (rule 13)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 34
	Const          goto state 5

State 31

	Stm -> type "::=" . TypeDef                         (rule 1)

	type           shift, and enter state 33

	TypeDef        goto state 32

State 32

	Stm -> type "::=" TypeDef .                         (rule 1)
	TypeDef -> TypeDef . "|" type                       (rule 36)

	"|"            shift, and enter state 69
	%eof           reduce using rule 1


State 33

	TypeDef -> type .                                   (rule 35)

	"|"            reduce using rule 35
	%eof           reduce using rule 35


State 34

	Exp -> Exp . binop Exp                              (rule 13)
	Exp -> Exp binop Exp .                              (rule 13)

	"=>"           reduce using rule 13
	";"            reduce using rule 13
	","            reduce using rule 13
	")"            reduce using rule 13
	"{"            reduce using rule 13
	binop          reduce using rule 13
	%eof           reduce using rule 13


State 35

	Exp -> "λ" ident "->" . Exp                         (rule 16)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 68
	Const          goto state 5

State 36

	Exp -> "(" Exp ")" .                                (rule 12)

	"=>"           reduce using rule 12
	";"            reduce using rule 12
	","            reduce using rule 12
	")"            reduce using rule 12
	"{"            reduce using rule 12
	binop          reduce using rule 12
	%eof           reduce using rule 12


State 37

	Exp -> Exp . binop Exp                              (rule 13)
	Args -> Exp .                                       (rule 21)

	","            reduce using rule 21
	")"            reduce using rule 21
	binop          shift, and enter state 30


State 38

	Exp -> ident "(" Args . ")"                         (rule 18)
	Args -> Args . "," Exp                              (rule 22)

	","            shift, and enter state 66
	")"            shift, and enter state 67


State 39

	Stm -> ident ":=" Exp .                             (rule 4)
	Exp -> Exp . binop Exp                              (rule 13)

	binop          shift, and enter state 30
	%eof           reduce using rule 4


State 40

	Stm -> ident ":=" "{" . Exps "}"                    (rule 5)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 63
	Const          goto state 5
	Exps           goto state 64
	Exp1           goto state 65

State 41

	Stm -> ident ":" Type .                             (rule 2)
	Type -> Type . "->" type                            (rule 38)

	"->"           shift, and enter state 62
	%eof           reduce using rule 2


State 42

	Stm -> ident ":" "?" .                              (rule 3)

	%eof           reduce using rule 3


State 43

	Type -> type .                                      (rule 37)

	"->"           reduce using rule 37
	%eof           reduce using rule 37


State 44

	Exp -> Exp . binop Exp                              (rule 13)
	Exp -> ident "<-" Exp .                             (rule 14)

	"=>"           reduce using rule 14
	";"            reduce using rule 14
	","            reduce using rule 14
	")"            reduce using rule 14
	"{"            reduce using rule 14
	binop          shift, and enter state 30
	%eof           reduce using rule 14


State 45

	Exp -> pattern "{" Pattern . "}"                    (rule 11)
	Pattern -> Pattern . Pattern1                       (rule 27)

	str            shift, and enter state 7
	chr            shift, and enter state 8
	"}"            shift, and enter state 61
	int            shift, and enter state 11

	Pattern1       goto state 60
	Const          goto state 47

State 46

	Pattern -> Pattern1 .                               (rule 26)

	str            reduce using rule 26
	chr            reduce using rule 26
	"}"            reduce using rule 26
	int            reduce using rule 26


State 47

	Pattern1 -> Const . "=>" Exp ";"                    (rule 28)

	"=>"           shift, and enter state 59


State 48

	Exp -> case Exp "{" . Case "}"                      (rule 19)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 56
	Case           goto state 57
	Case1          goto state 58
	Const          goto state 5

State 49

	Stm -> export type "{" . "}"                        (rule 7)

	"}"            shift, and enter state 55


State 50

	Stm -> export "{" "}" .                             (rule 8)

	%eof           reduce using rule 8


State 51

	Stm -> instance type type . "{" "}"                 (rule 9)

	"{"            shift, and enter state 54


State 52

	Stm -> class type ident . "{" "}"                   (rule 6)

	"{"            shift, and enter state 53


State 53

	Stm -> class type ident "{" . "}"                   (rule 6)

	"}"            shift, and enter state 81


State 54

	Stm -> instance type type "{" . "}"                 (rule 9)

	"}"            shift, and enter state 80


State 55

	Stm -> export type "{" "}" .                        (rule 7)

	%eof           reduce using rule 7


State 56

	Exp -> Exp . binop Exp                              (rule 13)
	Case1 -> Exp . "=>" Exp ";"                         (rule 25)

	"=>"           shift, and enter state 79
	binop          shift, and enter state 30


State 57

	Exp -> case Exp "{" Case . "}"                      (rule 19)
	Case -> Case . Case1                                (rule 24)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	"}"            shift, and enter state 78
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 56
	Case1          goto state 77
	Const          goto state 5

State 58

	Case -> Case1 .                                     (rule 23)

	"λ"            reduce using rule 23
	str            reduce using rule 23
	chr            reduce using rule 23
	"("            reduce using rule 23
	"}"            reduce using rule 23
	ident          reduce using rule 23
	int            reduce using rule 23
	pattern        reduce using rule 23
	case           reduce using rule 23


State 59

	Pattern1 -> Const "=>" . Exp ";"                    (rule 28)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 76
	Const          goto state 5

State 60

	Pattern -> Pattern Pattern1 .                       (rule 27)

	str            reduce using rule 27
	chr            reduce using rule 27
	"}"            reduce using rule 27
	int            reduce using rule 27


State 61

	Exp -> pattern "{" Pattern "}" .                    (rule 11)

	"=>"           reduce using rule 11
	";"            reduce using rule 11
	","            reduce using rule 11
	")"            reduce using rule 11
	"{"            reduce using rule 11
	binop          reduce using rule 11
	%eof           reduce using rule 11


State 62

	Type -> Type "->" . type                            (rule 38)

	type           shift, and enter state 75


State 63

	Exp -> Exp . binop Exp                              (rule 13)
	Exp1 -> Exp . ";"                                   (rule 34)

	";"            shift, and enter state 74
	binop          shift, and enter state 30


State 64

	Stm -> ident ":=" "{" Exps . "}"                    (rule 5)
	Exps -> Exps . Exp1                                 (rule 33)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	"}"            shift, and enter state 73
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 63
	Const          goto state 5
	Exp1           goto state 72

State 65

	Exps -> Exp1 .                                      (rule 32)

	"λ"            reduce using rule 32
	str            reduce using rule 32
	chr            reduce using rule 32
	"("            reduce using rule 32
	"}"            reduce using rule 32
	ident          reduce using rule 32
	int            reduce using rule 32
	pattern        reduce using rule 32
	case           reduce using rule 32


State 66

	Args -> Args "," . Exp                              (rule 22)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 71
	Const          goto state 5

State 67

	Exp -> ident "(" Args ")" .                         (rule 18)

	"=>"           reduce using rule 18
	";"            reduce using rule 18
	","            reduce using rule 18
	")"            reduce using rule 18
	"{"            reduce using rule 18
	binop          reduce using rule 18
	%eof           reduce using rule 18


State 68

	Exp -> Exp . binop Exp                              (rule 13)
	Exp -> "λ" ident "->" Exp .                         (rule 16)

	"=>"           reduce using rule 16
	";"            reduce using rule 16
	","            reduce using rule 16
	")"            reduce using rule 16
	"{"            reduce using rule 16
	binop          shift, and enter state 30
	%eof           reduce using rule 16


State 69

	TypeDef -> TypeDef "|" . type                       (rule 36)

	type           shift, and enter state 70


State 70

	TypeDef -> TypeDef "|" type .                       (rule 36)

	"|"            reduce using rule 36
	%eof           reduce using rule 36


State 71

	Exp -> Exp . binop Exp                              (rule 13)
	Args -> Args "," Exp .                              (rule 22)

	","            reduce using rule 22
	")"            reduce using rule 22
	binop          shift, and enter state 30


State 72

	Exps -> Exps Exp1 .                                 (rule 33)

	"λ"            reduce using rule 33
	str            reduce using rule 33
	chr            reduce using rule 33
	"("            reduce using rule 33
	"}"            reduce using rule 33
	ident          reduce using rule 33
	int            reduce using rule 33
	pattern        reduce using rule 33
	case           reduce using rule 33


State 73

	Stm -> ident ":=" "{" Exps "}" .                    (rule 5)

	%eof           reduce using rule 5


State 74

	Exp1 -> Exp ";" .                                   (rule 34)

	"λ"            reduce using rule 34
	str            reduce using rule 34
	chr            reduce using rule 34
	"("            reduce using rule 34
	"}"            reduce using rule 34
	ident          reduce using rule 34
	int            reduce using rule 34
	pattern        reduce using rule 34
	case           reduce using rule 34


State 75

	Type -> Type "->" type .                            (rule 38)

	"->"           reduce using rule 38
	%eof           reduce using rule 38


State 76

	Exp -> Exp . binop Exp                              (rule 13)
	Pattern1 -> Const "=>" Exp . ";"                    (rule 28)

	";"            shift, and enter state 83
	binop          shift, and enter state 30


State 77

	Case -> Case Case1 .                                (rule 24)

	"λ"            reduce using rule 24
	str            reduce using rule 24
	chr            reduce using rule 24
	"("            reduce using rule 24
	"}"            reduce using rule 24
	ident          reduce using rule 24
	int            reduce using rule 24
	pattern        reduce using rule 24
	case           reduce using rule 24


State 78

	Exp -> case Exp "{" Case "}" .                      (rule 19)

	"=>"           reduce using rule 19
	";"            reduce using rule 19
	","            reduce using rule 19
	")"            reduce using rule 19
	"{"            reduce using rule 19
	binop          reduce using rule 19
	%eof           reduce using rule 19


State 79

	Case1 -> Exp "=>" . Exp ";"                         (rule 25)

	"λ"            shift, and enter state 6
	str            shift, and enter state 7
	chr            shift, and enter state 8
	"("            shift, and enter state 9
	ident          shift, and enter state 22
	int            shift, and enter state 11
	pattern        shift, and enter state 12
	case           shift, and enter state 13

	Exp            goto state 82
	Const          goto state 5

State 80

	Stm -> instance type type "{" "}" .                 (rule 9)

	%eof           reduce using rule 9


State 81

	Stm -> class type ident "{" "}" .                   (rule 6)

	%eof           reduce using rule 6


State 82

	Exp -> Exp . binop Exp                              (rule 13)
	Case1 -> Exp "=>" Exp . ";"                         (rule 25)

	";"            shift, and enter state 84
	binop          shift, and enter state 30


State 83

	Pattern1 -> Const "=>" Exp ";" .                    (rule 28)

	str            reduce using rule 28
	chr            reduce using rule 28
	"}"            reduce using rule 28
	int            reduce using rule 28


State 84

	Case1 -> Exp "=>" Exp ";" .                         (rule 25)

	"λ"            reduce using rule 25
	str            reduce using rule 25
	chr            reduce using rule 25
	"("            reduce using rule 25
	"}"            reduce using rule 25
	ident          reduce using rule 25
	int            reduce using rule 25
	pattern        reduce using rule 25
	case           reduce using rule 25


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 39
Number of terminals: 26
Number of non-terminals: 13
Number of states: 85
